--- a/index.html
+++ b/index.html
@@ -21,6 +21,31 @@
             </ul>
         </div>
         </nav>
+
+        <div id="showcase">
+            <div class="container">
+                <div class="showcase-content">
+                    <h1><span class ="text-primary">Enjoy</span> Your Stay</h1>
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem deleniti, sapiente vitae perferendis impedit voluptas.</p>
+                    <a class="btn" href="./about.html">About Our Hotel</a>
+                </div>
+                </div>
+            </div>
+        </div>
     </header>
+
+    <section id="home-info" class="bg-dark">
+        <div class="info-img"></div>
+        <div class="info-content">
+            <h2><span class="text-primary">The History</span> Of Our Hotel</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit autem doloribus, veritatis quam, voluptatum facere nobis eligendi nulla corporis reiciendis ea! Veniam cupiditate ipsum consequatur odit, obcaecati, excepturi molestias quo repellat dolorem impedit accusantium ducimus quas sint quia quidem voluptatum?</p>
+            <a href="./about.html" class="btn btn-light">Read More</a>
+        </div>
+
+    </section>
+
+
+
+
 </body>
 </html>
