--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Welcome to the best hotel in Boston Massachusetts ">
     <meta name="keywords" content="hotel, boston, new england hotel">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/your-path-to-fontawesome/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <title>Hotel BT | Welcome  </title>
 </head>
@@ -41,8 +42,33 @@
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit autem doloribus, veritatis quam, voluptatum facere nobis eligendi nulla corporis reiciendis ea! Veniam cupiditate ipsum consequatur odit, obcaecati, excepturi molestias quo repellat dolorem impedit accusantium ducimus quas sint quia quidem voluptatum?</p>
             <a href="./about.html" class="btn btn-light">Read More</a>
         </div>
-
     </section>
+
+    <section id="features">
+        <div class="box bg-light">
+            <i class="fas fa-hotel fa-3x"></i>
+            <h3>Great Location</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, libero.</p>
+        </div>
+        <div class="box bg-primary">
+            <i class="fas fa-utensils fa-3x"></i>
+             <h3>Free Meals</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, libero.</p>   
+        </div>
+        <div class="box bg-light">
+            <i class="fas fa-dumbell fa-3x"></i>
+             <h3>Fitnness Room</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, libero.</p>
+        </div>
+    </section>
+
+    <div class="clr"></div>
+    
+    <footer id="main-footer">
+        <p>Hotel BT &copy; 2019, All Rights Reserved</p>
+    </footer>
+
+
 
 
 
