--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Welcome to the best hotel in Boston Massachusetts ">
     <meta name="keywords" content="hotel, boston, new england hotel">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/your-path-to-fontawesome/css/all.css" rel="stylesheet">
+    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"  integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMLF1V92rMpaX4PP" crossorigin="anonymous" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <title>Hotel BT | Welcome  </title>
 </head>
