--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"  integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMLF1V92rMpaX4PP" crossorigin="anonymous" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="./mobile.css">
     <title>Hotel BT | Welcome  </title>
 </head>
 <body>
